@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+2011-02-05  Vasco Nunes
+	* Fixed about dialog on macosx
+
 2011-02-05  Ivo Nunes
     * Fixed and re-enabled Mac OS X UI Cocoa menu integration
 
